<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.4.3</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <groupId>no.nav.ung</groupId>
    <artifactId>ung-deltakelse-opplyser</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>ung-deltakelse-opplyser</name>
    <description>Tjenesten lytter på hendelser om innmelding/utmelding av ungdommer i programmet, lagrer ned
        opplysningene, oppretter oppgave for deltaker på mine-sider, og sender opplysingene til ung-sak
    </description>
    <url/>
    <licenses>
        <license/>
    </licenses>
    <developers>
        <developer/>
    </developers>
    <scm>
        <connection/>
        <developerConnection/>
        <tag/>
        <url/>
    </scm>
    <properties>
        <java.version>21</java.version>
        <kotlin.version>2.1.10</kotlin.version>
        <tokenSupport.version>5.0.17</tokenSupport.version>
        <springdoc.version>2.8.5</springdoc.version>
        <spring-cloud.version>4.2.0</spring-cloud.version>
        <logback.logstash.version>8.0</logback.logstash.version>
        <spring-mockk.version>4.0.2</spring-mockk.version>
        <awaitility.version>4.3.0</awaitility.version>
        <ung-sak.version>1.0.1</ung-sak.version>
        <fp-sak.version>2.7.1</fp-sak.version>
        <k9-format.version>11.3.0</k9-format.version>
        <graphql-kotlin.version>8.3.0</graphql-kotlin.version>
    </properties>
    <dependencies>
        <dependency>

            <!-- Spring Boot -->
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.kafka</groupId>
            <artifactId>spring-kafka</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.kafka</groupId>
            <artifactId>spring-kafka-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-testcontainers</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.cloud</groupId>
            <artifactId>spring-cloud-starter-contract-stub-runner</artifactId>
            <version>${spring-cloud.version}</version>
            <scope>test</scope>
        </dependency>
        <!-- Spring Boot -->

        <!-- Sikkerhet -->
        <dependency>
            <groupId>no.nav.security</groupId>
            <artifactId>token-validation-spring</artifactId>
            <version>${tokenSupport.version}</version>
        </dependency>
        <dependency>
            <groupId>no.nav.security</groupId>
            <artifactId>token-client-spring</artifactId>
            <version>${tokenSupport.version}</version>
        </dependency>
        <dependency>
            <groupId>no.nav.security</groupId>
            <artifactId>token-validation-spring-test</artifactId>
            <version>${tokenSupport.version}</version>
            <scope>test</scope>
        </dependency>
        <!-- Sikkerhet -->

        <!-- K9 Kontrakter -->
        <dependency>
            <groupId>no.nav.ung.sak</groupId>
            <artifactId>kontrakt</artifactId>
            <version>${ung-sak.version}</version>
        </dependency>
        <dependency>
            <groupId>no.nav.k9</groupId>
            <artifactId>soknad</artifactId>
            <version>${k9-format.version}</version>
        </dependency>
        <!-- K9 Kontrakter -->

        <!-- GraphQL -->
        <dependency>
            <groupId>com.expediagroup</groupId>
            <artifactId>graphql-kotlin-spring-client</artifactId>
            <version>${graphql-kotlin.version}</version>
        </dependency>
        <!-- GraphQL -->

        <!-- Swagger -->
        <dependency>
            <groupId>org.springdoc</groupId>
            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
            <version>${springdoc.version}</version>
        </dependency>
        <!-- Swagger -->

        <!-- Jackson -->
        <dependency>
            <groupId>com.fasterxml.jackson.module</groupId>
            <artifactId>jackson-module-kotlin</artifactId>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.datatype</groupId>
            <artifactId>jackson-datatype-jsr310</artifactId>
        </dependency>
        <!-- Jackson -->

        <!-- Database -->
        <dependency>
            <groupId>org.flywaydb</groupId>
            <artifactId>flyway-core</artifactId>
        </dependency>
        <dependency>
            <groupId>org.flywaydb</groupId>
            <artifactId>flyway-database-postgresql</artifactId>
        </dependency>
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
        </dependency>
        <dependency>
            <groupId>io.hypersistence</groupId>
            <artifactId>hypersistence-utils-hibernate-63</artifactId>
            <version>3.9.2</version>
        </dependency>

        <dependency>
            <groupId>org.testcontainers</groupId>
            <artifactId>postgresql</artifactId>
            <scope>test</scope>
        </dependency>
        <!-- Database -->

        <!-- Kotlin -->
        <dependency>
            <groupId>org.jetbrains.kotlin</groupId>
            <artifactId>kotlin-reflect</artifactId>
        </dependency>
        <dependency>
            <groupId>org.jetbrains.kotlin</groupId>
            <artifactId>kotlin-stdlib-jdk8</artifactId>
            <version>${kotlin.version}</version>
        </dependency>
        <dependency>
            <groupId>org.jetbrains.kotlin</groupId>
            <artifactId>kotlin-test-junit5</artifactId>
            <scope>test</scope>
        </dependency>
        <!-- Kotlin -->

        <!-- Logging -->
        <dependency>
            <groupId>net.logstash.logback</groupId>
            <artifactId>logstash-logback-encoder</artifactId>
            <version>${logback.logstash.version}</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
        </dependency>

        <!-- Logging -->

        <!-- Utils -->
        <dependency>
            <groupId>no.nav.fpsak.tidsserie</groupId>
            <artifactId>fpsak-tidsserie</artifactId>
            <version>${fp-sak.version}</version>
        </dependency>
        <!-- Utils -->

        <!-- Diverse testing -->
        <dependency>
            <groupId>org.testcontainers</groupId>
            <artifactId>junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.testcontainers</groupId>
            <artifactId>testcontainers</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.testcontainers</groupId>
            <artifactId>kafka</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.ninja-squad</groupId>
            <artifactId>springmockk</artifactId>
            <version>${spring-mockk.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.awaitility</groupId>
            <artifactId>awaitility-kotlin</artifactId>
            <version>${awaitility.version}</version>
            <scope>test</scope>
        </dependency>
        <!-- Diverse testing -->

        <!--Krevd for openapitools plugin-->
        <!-- https://mvnrepository.com/artifact/org.openapitools/jackson-databind-nullable -->
        <dependency>
            <groupId>org.openapitools</groupId>
            <artifactId>jackson-databind-nullable</artifactId>
            <version>0.2.6</version>
        </dependency>
        <!--Krevd for openapitools plugin-->
    </dependencies>

    <build>
        <sourceDirectory>src/main/kotlin</sourceDirectory>
        <testSourceDirectory>src/test/kotlin</testSourceDirectory>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.jetbrains.kotlin</groupId>
                <artifactId>kotlin-maven-plugin</artifactId>
                <version>${kotlin.version}</version>
                <executions>
                    <execution>
                        <id>compile</id>
                        <phase>compile</phase>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>test-compile</id>
                        <phase>test-compile</phase>
                        <goals>
                            <goal>test-compile</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <args>
                        <arg>-Xjsr305=strict</arg>
                    </args>
                    <compilerPlugins>
                        <plugin>spring</plugin>
                        <plugin>jpa</plugin>
                    </compilerPlugins>
                    <jvmTarget>21</jvmTarget>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.jetbrains.kotlin</groupId>
                        <artifactId>kotlin-maven-allopen</artifactId>
                        <version>${kotlin.version}</version>
                    </dependency>
                    <dependency>
                        <groupId>org.jetbrains.kotlin</groupId>
                        <artifactId>kotlin-maven-noarg</artifactId>
                        <version>${kotlin.version}</version>
                    </dependency>
                </dependencies>
            </plugin>
            <plugin>
                <groupId>com.expediagroup</groupId>
                <artifactId>graphql-kotlin-maven-plugin</artifactId>
                <version>${graphql-kotlin.version}</version>
                <executions>
                    <execution>
                        <id>generate-graphql-client</id>
                        <goals>
                            <goal>generate-client</goal>
                        </goals>
                        <configuration>
                            <packageName>no.nav.pdl.generated</packageName>
                            <schemaFile>${project.basedir}/src/main/resources/pdl/pdl-api-schema.graphql</schemaFile>
                            <queryFileDirectory>${project.basedir}/src/main/resources/pdl</queryFileDirectory>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.5.2</version>
                <configuration>
                    <argLine>--add-opens=java.base/java.lang.reflect=ALL-UNNAMED</argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.openapitools</groupId>
                <artifactId>openapi-generator-maven-plugin</artifactId>
                <version>7.10.0</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>generate</goal>
                        </goals>
                        <configuration>
                            <generatorName>java</generatorName>
                            <library>resttemplate</library>
                            <configOptions>
                                <useSpringBoot3>true</useSpringBoot3>
                                <useJakartaEe>true</useJakartaEe>
                                <java8>true</java8>
                                <serializationLibrary>jackson</serializationLibrary>
                                <generateApiTests>false</generateApiTests>
                                <testOutput>${project.build.directory}/generated-test-sources/openapi</testOutput>
                            </configOptions>
                            <output>${project.build.directory}/generated-sources/openapi</output>
                            <skipValidateSpec>true</skipValidateSpec>
                            <inputSpec>https://ung-deltakelse-opplyser.intern.dev.nav.no/v3/api-docs</inputSpec>
                            <apiPackage>no.nav.ung.deltakelseopplyser.api</apiPackage>
                            <modelPackage>no.nav.ung.deltakelseopplyser.model</modelPackage>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
